--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # For Qt
 set(CMAKE_PREFIX_PATH "H:/Qt/5.15.1/msvc2019_64")
+set(CMAKE_PREFIX_PATH "D:/Qt/5.15.1/msvc2019_64")
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets Charts REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets Charts REQUIRED)
