--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 *.vcxproj
 *.vcxproj.filters
 
+# VSCode as well
+.vscode/
+
+# Discard logs
+*.log
+
 # Ignore cmake generator files created at build time
 *.cmake
 *.stamp
