Fix compiler warnings. Fix connect thread wait on main window closing.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -129,3 +129,15 @@ else()
 	    ${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking/include)
 endif()
 
+# Copy aditional files when building
+add_custom_command(TARGET DCScan-Client POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E make_directory
+	$<TARGET_FILE_DIR:DCScan-Client>/styles
+)
+# Copy default style
+add_custom_command(TARGET DCScan-Client POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different
+	${CMAKE_CURRENT_SOURCE_DIR}/styles/default.css
+	$<TARGET_FILE_DIR:DCScan-Client>/styles/
+)
+
