Add support for DCSsimu (local) module.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -16,12 +16,29 @@ set(CMAKE_EXE_LINKER_FLAGS "/IGNORE:4217 /NODEFAULTLIB:libcmt.lib")
 # For Qt
 list(APPEND CMAKE_PREFIX_PATH "C:/Qt/5.15.2/msvc2019_64")
 
+# We need this for the simulator, it's set to required since it should be pretty much always available
+find_package(OpenGL REQUIRED)
 
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets Charts Multimedia REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets Charts Multimedia REQUIRED)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets OpenGL Charts Multimedia PrintSupport REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets OpenGL Charts Multimedia PrintSupport REQUIRED)
 
-get_property(loc TARGET Qt5::Core PROPERTY IMPORTED_LOCATION_RELEASE)
-message(STATUS "${loc}")
+# set(PACKAGES_LIBS "${OPENGL_LIBRARIES} ${DCSMODULESAPI_LIBRARIES}")
+
+# Check if the simulation library wrapper is installed on this system
+find_package(DCSsimuWrapper QUIET)
+if(DCSsimuWrapper_FOUND)
+	message(STATUS "Found DCSsimuWrapper!")
+	message(STATUS "Adding simulation module as a window.")
+	# set(PACKAGES_LIBS "${PACKAGES_LIBS} ${DCSSIMUWRAPPER_LIBRARIES}")
+else()
+	message(STATUS "DCSsimu was not found under the CMAKE_INSTALL_PREFIX directories.")
+	message(STATUS "If you have it installed consider pointing to the install dir.")
+	message(WARN "Compiling without DCSsimu.")
+endif()
+
+# get_property(loc TARGET Qt5::Core PROPERTY IMPORTED_LOCATION_RELEASE)
+# message(STATUS "${loc}")
+
 
 qt5_add_resources(RESFILES res/res.qrc)
 
@@ -74,6 +91,10 @@ set(SOURCE
 	src/windows/clinometer_window.cpp
 	src/windows/clinometer_window.ui
 
+	src/windows/simulation_window.h
+	src/windows/simulation_window.cpp
+	src/windows/simulation_window.ui
+
 	src/dialogs/connect_dialog.h
 	src/dialogs/connect_dialog.ui
 
@@ -86,51 +107,77 @@ set(SOURCE
 	src/autogen_macros.h # Ui autogen friendly macros
 )
 
-# add_subdirectory(submodules/Qt-Advanced-Docking-System)
+# if(DEBUG_BUILD)
+# 	add_executable(DCScan-Client # Enable console if in debug mode
+# 		${SOURCE}
+# 		${RESFILES}
+# 		${app_WINRC}
+# 	)
+# else()
+# 	add_executable(DCScan-Client WIN32 # Disable console if in release mode
+# 		${SOURCE}
+# 		${RESFILES}
+# 		${app_WINRC}
+# 	)
+# endif()
 
-if(DEBUG_BUILD)
-	add_executable(DCScan-Client # Enable console if in debug mode
-		${SOURCE}
-		${RESFILES}
-		${app_WINRC}
-	)
-else()
-	add_executable(DCScan-Client WIN32 # Disable console if in release mode
-		${SOURCE}
-		${RESFILES}
-		${app_WINRC}
-	)
+add_executable(DCScan-Client
+	${SOURCE}
+	${RESFILES}
+	${app_WINRC}
+)
+# Disable console if in release mode
+set_target_properties(DCScan-Client PROPERTIES WIN32_EXECUTABLE $<CONFIG:Release>)
+
+target_link_libraries(DCScan-Client PRIVATE
+	Qt${QT_VERSION_MAJOR}::Widgets
+	Qt${QT_VERSION_MAJOR}::Charts
+	Qt${QT_VERSION_MAJOR}::Multimedia
+	Qt${QT_VERSION_MAJOR}::OpenGL
+	Qt${QT_VERSION_MAJOR}::PrintSupport
+	"${OPENGL_LIBRARIES}"
+	"${DCSMODULESAPI_LIBRARIES}"
+)
+
+target_include_directories(DCScan-Client PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/build/include
+	"${DCSMODULESAPI_INCLUDE_DIRS}"
+)
+
+if(DCSsimuWrapper_FOUND)
+	message(STATUS "Linking: ${DCSSIMUWRAPPER_LIBRARIES}")
+	target_link_libraries(DCScan-Client PRIVATE "${DCSSIMUWRAPPER_LIBRARIES}")
+	target_include_directories(DCScan-Client PRIVATE "${DCSSIMUWRAPPER_INCLUDE_DIRS}")
+	target_compile_definitions(DCScan-Client PRIVATE -D_USE_MATH_DEFINES) # Add M_PI support from <math.h>/<cmath>
 endif()
 
-if(DEBUG_BUILD)
-    message(WARNING "Configuring client for debug mode.")
+# if(DEBUG_BUILD)
+#     message(WARNING "Configuring client for debug mode.")
 
-	# Fix linker warnings's (LNK4217) in the 3rd party library
-	target_link_libraries(DCScan-Client PRIVATE
-		Qt${QT_VERSION_MAJOR}::Widgets
-		Qt${QT_VERSION_MAJOR}::Charts
-		Qt${QT_VERSION_MAJOR}::Multimedia
-		"${DCSMODULESAPI_LIBRARIES}"
-		${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking/debug/lib/qtadvanceddocking_static.lib)
+# 	# Fix linker warnings's (LNK4217) in the 3rd party library
+# 	target_link_libraries(DCScan-Client PRIVATE 
+# 		${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking/debug/lib/qtadvanceddocking_static.lib
+# 	)
+# 	target_include_directories(DCScan-Client PRIVATE
+# 		${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking/debug/include
+# 	)
+# else()
+# 	# Fix linker warnings's (LNK4217) in the 3rd party library
+# 	target_link_libraries(DCScan-Client PRIVATE
+# 	    ${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking/lib/qtadvanceddocking_static.lib
+# 	)
+# 	target_include_directories(DCScan-Client PRIVATE
+# 	    ${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking/include
+# 	)
+# endif()
 
-	target_include_directories(DCScan-Client PRIVATE
-		${CMAKE_CURRENT_SOURCE_DIR}/build/include
-		"${DCSMODULESAPI_INCLUDE_DIRS}"
-		${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking/debug/include)
-else()
-	# Fix linker warnings's (LNK4217) in the 3rd party library
-	target_link_libraries(DCScan-Client PRIVATE
-	    Qt${QT_VERSION_MAJOR}::Widgets
-		Qt${QT_VERSION_MAJOR}::Charts
-		Qt${QT_VERSION_MAJOR}::Multimedia
-	    "${DCSMODULESAPI_LIBRARIES}"
-	    ${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking/lib/qtadvanceddocking_static.lib)
-
-	target_include_directories(DCScan-Client PRIVATE
-	    ${CMAKE_CURRENT_SOURCE_DIR}/build/include
-	    "${DCSMODULESAPI_INCLUDE_DIRS}"
-	    ${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking/include)
-endif()
+# Fix linker warnings's (LNK4217) in the 3rd party library
+target_link_libraries(DCScan-Client PRIVATE 
+	"${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking$<$<CONFIG:Debug>:/debug>/lib/qtadvanceddocking_static.lib"
+)
+target_include_directories(DCScan-Client PRIVATE
+	"${CMAKE_CURRENT_SOURCE_DIR}/lib/qtadvanceddocking$<$<CONFIG:Debug>:/debug>/include"
+)
 
 # Copy aditional files when building
 add_custom_command(TARGET DCScan-Client POST_BUILD
