Display warning on simulation window unavailable.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -29,11 +29,12 @@ find_package(DCSsimuWrapper QUIET)
 if(DCSsimuWrapper_FOUND)
 	message(STATUS "Found DCSsimuWrapper!")
 	message(STATUS "Adding simulation module as a window.")
+	add_definitions(-DDCSSIMU_FOUND)
 	# set(PACKAGES_LIBS "${PACKAGES_LIBS} ${DCSSIMUWRAPPER_LIBRARIES}")
 else()
 	message(STATUS "DCSsimu was not found under the CMAKE_INSTALL_PREFIX directories.")
 	message(STATUS "If you have it installed consider pointing to the install dir.")
-	message(WARN "Compiling without DCSsimu.")
+	message(WARNING "Compiling without DCSsimu.")
 endif()
 
 # get_property(loc TARGET Qt5::Core PROPERTY IMPORTED_LOCATION_RELEASE)
